# eunomia

./: CMakeLists.txt  COPYING  Doxyfile  README.md  colour.h  debuglogger.h  dibin.cpp  dibio.h  dibout.cpp  exception.h  hexpainter.h  hextest.cpp  ibuf_blt.cpp  ibuf_blt.h  ibuf_draw.h  imagebuffer.h  jpegin.cpp  jpegio.cpp  jpegio.h  jpegio_implement.h  jpegout.cpp  noncopyable.h  pict_dupl_pictidx.cpp  pict_grayscaled.cpp  pict_indexing.h  pict_magnify.cpp  pict_magnify_func.h  pict_reduce.cpp  pictidx_dupl_pict.cpp  pictrgba_dupl_pictidx.cpp  pictrgba_grayscaled.cpp  pictrgba_magnify.cpp  pictrgba_reduce.cpp  pictrgba_stripalpha.cpp  picture.cpp  picture.h  picture_indexed.cpp  picture_indexed.h  picture_rgba.cpp  picture_rgba.h  (+7 more)
